see changelog for changes

--- a/GameData/Janus92_kOS_Automation_patch.cfg
+++ b/GameData/Janus92_kOS_Automation_patch.cfg
@@ -35,6 +35,12 @@
 // Fuel Tanks
 
 
+@PART[SEP_S20_HEADER,SEP_B4_CORE]:NEEDS[kOS,B9PartSwitch,CryoTanks,!ConfigurableContainers/Parts,!ModularFuelTanks,!RealFuels,!RealismOverhaul]:LAST[CryoTanks]
+{
+	-MODULE[ModuleCryoTank] {}
+	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]] {}
+}
+
 @PART[SEP_S20_BODY]:NEEDS[kOS,!RealismOverhaul,!ConfigurableContainers/Parts,!ModularFuelTanks,!RealFuels]:AFTER[StarshipExpansionProject]
 {
     MODULE
