see changelog for changes

--- a/GameData/Janus92_kOS_Automation_patch.cfg
+++ b/GameData/Janus92_kOS_Automation_patch.cfg
@@ -1,7 +1,7 @@
 // B9 Tanks
 
 
-@B9_TANK_TYPE[SEPLFOX]:NEEDS[kOS,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@B9_TANK_TYPE[SEPLFOX]:NEEDS[kOS,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	-RESOURCE,* {}
 	RESOURCE
@@ -16,7 +16,7 @@
 	}
 }
 
-@B9_TANK_TYPE[SEPLMOX]:NEEDS[CommunityResourcePack,kOS,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@B9_TANK_TYPE[SEPLMOX]:NEEDS[CommunityResourcePack,kOS,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	-RESOURCE,* {}
 	RESOURCE
@@ -35,13 +35,13 @@
 // Fuel Tanks
 
 
-@PART[SEP_S20_HEADER,SEP_B4_CORE]:NEEDS[kOS,B9PartSwitch,CryoTanks,!ConfigurableContainers/Parts,!ModularFuelTanks,!RealFuels,!RealismOverhaul]:LAST[CryoTanks]
+@PART[SEP_S20_HEADER,SEP_B4_CORE]:NEEDS[kOS,B9PartSwitch,CryoTanks,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:LAST[CryoTanks]
 {
 	-MODULE[ModuleCryoTank] {}
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]] {}
 }
 
-@PART[SEP_S20_BODY]:NEEDS[kOS,!RealismOverhaul,!ConfigurableContainers/Parts,!ModularFuelTanks,!RealFuels]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_BODY]:NEEDS[kOS,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
     MODULE
     {
@@ -63,7 +63,7 @@
     }
 }
 
-@PART[SEP_B4_CORE]:NEEDS[kOS,!RealismOverhaul,!ConfigurableContainers/Parts,!ModularFuelTanks,!RealFuels]:AFTER[StarshipExpansionProject]
+@PART[SEP_B4_CORE]:NEEDS[kOS,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
     MODULE
     {
@@ -85,7 +85,7 @@
     }
 }
 
-@PART[SEP_S20_HEADER]:NEEDS[kOS,!RealismOverhaul,!ConfigurableContainers/Parts,!ModularFuelTanks,!RealFuels]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_HEADER]:NEEDS[kOS,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
     -RESOURCE,* {}
     RESOURCE
@@ -102,7 +102,7 @@
     }
 }
 
-@PART[SEP_S20_TANKER]:NEEDS[kOS,!RealismOverhaul,!ConfigurableContainers/Parts,!ModularFuelTanks,!RealFuels]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_TANKER]:NEEDS[kOS,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
     -RESOURCE,* {}
     RESOURCE
@@ -120,7 +120,7 @@
 }
 
 
-@PART[SEP_S20_BODY]:NEEDS[kOS,B9PartSwitch,!ConfigurableContainers/Parts,!ModularFuelTanks,!RealFuels,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_BODY]:NEEDS[kOS,B9PartSwitch,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]]
 	{
@@ -128,7 +128,7 @@
 	}
 }
 
-@PART[SEP_B4_CORE]:NEEDS[kOS,B9PartSwitch,!ConfigurableContainers/Parts,!ModularFuelTanks,!RealFuels,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_B4_CORE]:NEEDS[kOS,B9PartSwitch,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]]
 	{
@@ -136,7 +136,7 @@
 	}
 }
 
-@PART[SEP_S20_TANKER]:NEEDS[kOS,B9PartSwitch,!ConfigurableContainers/Parts,!ModularFuelTanks,!RealFuels,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_TANKER]:NEEDS[kOS,B9PartSwitch,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]]
 	{
@@ -144,7 +144,7 @@
 	}
 }
 
-@PART[SEP_S20_HEADER]:NEEDS[kOS,B9PartSwitch,!ConfigurableContainers/Parts,!ModularFuelTanks,!RealFuels,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_HEADER]:NEEDS[kOS,B9PartSwitch,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]]
 	{
@@ -156,7 +156,7 @@
 // Thrust
 
 
-@PART[SEP_B4_33_CLUSTER]:NEEDS[kOS,CommunityResourcePack,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_B4_33_CLUSTER]:NEEDS[kOS,CommunityResourcePack,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@mass = 55
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPEngineSwitch]] {}
@@ -374,12 +374,12 @@
 		}
 	}
 }
-@PART[SEP_B4_33_CLUSTER]:NEEDS[kOS,!CommunityResourcePack,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_B4_33_CLUSTER]:NEEDS[kOS,!CommunityResourcePack,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@mass = 55
 	@MODULE[ModuleEnginesFX]:HAS[#engineID[AllEngines]]
 	{
-		@maxThrust = 10025
+		@maxThrust = 10440
 		-PROPELLANT,* {}
 		PROPELLANT
 		{
@@ -454,7 +454,7 @@
 	}
 }
 
-@PART[SEP_RAPTOR_SL]:NEEDS[kOS,CommunityResourcePack,!RealFuels,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_RAPTOR_SL]:NEEDS[kOS,CommunityResourcePack,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPFuelSwitch]] {}
@@ -544,7 +544,7 @@
 		}
 	}
 }
-@PART[SEP_RAPTOR_SL]:NEEDS[kOS,!CommunityResourcePack,!RealFuels,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_RAPTOR_SL]:NEEDS[kOS,!CommunityResourcePack,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleEnginesFX]
 	{
@@ -572,7 +572,7 @@
 	}
 }
 
-@PART[SEP_RAPTOR_VAC]:NEEDS[kOS,CommunityResourcePack,!RealFuels,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_RAPTOR_VAC]:NEEDS[kOS,CommunityResourcePack,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1.25
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPFuelSwitch]] {}
@@ -662,7 +662,7 @@
 		}
 	}
 }
-@PART[SEP_RAPTOR_VAC]:NEEDS[kOS,!CommunityResourcePack,!RealFuels,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_RAPTOR_VAC]:NEEDS[kOS,!CommunityResourcePack,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleEnginesFX]
 	{
@@ -694,7 +694,7 @@
 // Venting
 
 
-@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW]:NEEDS[kOS,CommunityResourcePack,!RealFuels,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW]:NEEDS[kOS,CommunityResourcePack,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPVentSwtich]] {}
 	MODULE
@@ -850,7 +850,7 @@
 		}
 	}
 }
-@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW]:NEEDS[kOS,!CommunityResourcePack,!RealFuels,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW]:NEEDS[kOS,!CommunityResourcePack,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleEnginesFX]
 	{
@@ -874,7 +874,7 @@
 // RCS
 
 
-@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW|SEP_B4_CORE]:NEEDS[kOS,CommunityResourcePack,!RealFuels,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW|SEP_B4_CORE]:NEEDS[kOS,CommunityResourcePack,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPRCSSwitch]] {}
 	MODULE
@@ -963,7 +963,7 @@
 		}
 	}
 }
-@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW]:NEEDS[kOS,!CommunityResourcePack,!RealFuels,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW]:NEEDS[kOS,!CommunityResourcePack,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleRCSFX]
 	{
@@ -990,7 +990,7 @@
 	}
 }
 
-@PART[SEP_B4_CORE]:NEEDS[kOS,CommunityResourcePack,!RealFuels,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_B4_CORE]:NEEDS[kOS,CommunityResourcePack,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@mass = 35
     -MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPRCSSwitch]] {}
@@ -1080,7 +1080,7 @@
 		}
 	}
 }
-@PART[SEP_B4_CORE]:NEEDS[kOS,!CommunityResourcePack,!RealFuels,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_B4_CORE]:NEEDS[kOS,!CommunityResourcePack,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@mass = 35
 	@MODULE[ModuleRCSFX]
@@ -1113,7 +1113,7 @@
 // Other
 
 
-@PART[SLE_SS_OLP]:NEEDS[kOS,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SLE_SS_OLP]:NEEDS[kOS,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
     MODULE
     {
@@ -1133,7 +1133,7 @@
 	}
 }
 
-@PART[SEP_S20_CREW]:NEEDS[kOS,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_CREW]:NEEDS[kOS,!AtmosphereAutopilot,!FMRS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@mass=18
 }
