--- a/GameData/Janus92_kOS_Automation_patch.cfg
+++ b/GameData/Janus92_kOS_Automation_patch.cfg
@@ -85,6 +85,15 @@
     }
 }
 
+@PART[SEP_S20_TANKER,SEP_S20_CARGO,SEP_S20_CREW]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!AtmosphereAutopilot,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+{
+	MODULE
+    {
+        name = kOSProcessor
+        diskSpace = 255000
+    }
+}
+
 @PART[SEP_S20_HEADER]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!AtmosphereAutopilot,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
     -RESOURCE,* {}
