--- a/GameData/Janus92_kOS_Automation_patch.cfg
+++ b/GameData/Janus92_kOS_Automation_patch.cfg
@@ -1,7 +1,7 @@
 // B9 Tanks
 
 
-@B9_TANK_TYPE[SEPLFOX]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@B9_TANK_TYPE[SEPLFOX]:NEEDS[kOS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	-RESOURCE,* {}
 	RESOURCE
@@ -16,7 +16,7 @@
 	}
 }
 
-@B9_TANK_TYPE[SEPLMOX]:NEEDS[CommunityResourcePack,kOS,!AnimatedAttachment,!ConfigurableContainers,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@B9_TANK_TYPE[SEPLMOX]:NEEDS[CommunityResourcePack,kOS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	-RESOURCE,* {}
 	RESOURCE
@@ -35,13 +35,13 @@
 // Fuel Tanks
 
 
-@PART[SEP_S20_HEADER,SEP_B4_CORE]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,B9PartSwitch,CryoTanks,!RealSolarSystem,!RealismOverhaul]:LAST[CryoTanks]
+@PART[SEP_S20_HEADER,SEP_B4_CORE]:NEEDS[kOS,B9PartSwitch,CryoTanks,!RealSolarSystem,!RealismOverhaul]:LAST[CryoTanks]
 {
 	-MODULE[ModuleCryoTank] {}
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]] {}
 }
 
-@PART[SEP_S20_BODY]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_BODY]:NEEDS[kOS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
     MODULE
     {
@@ -63,7 +63,7 @@
     }
 }
 
-@PART[SEP_B4_CORE]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_B4_CORE]:NEEDS[kOS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
     MODULE
     {
@@ -85,7 +85,7 @@
     }
 }
 
-@PART[SEP_S20_TANKER,SEP_S20_CARGO,SEP_S20_CREW]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_TANKER,SEP_S20_CARGO,SEP_S20_CREW]:NEEDS[kOS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	MODULE
     {
@@ -94,7 +94,7 @@
     }
 }
 
-@PART[SEP_S20_HEADER]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_HEADER]:NEEDS[kOS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
     -RESOURCE,* {}
     RESOURCE
@@ -111,7 +111,7 @@
     }
 }
 
-@PART[SEP_S20_TANKER]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_TANKER]:NEEDS[kOS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
     -RESOURCE,* {}
     RESOURCE
@@ -129,7 +129,7 @@
 }
 
 
-@PART[SEP_S20_BODY]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,B9PartSwitch,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_BODY]:NEEDS[kOS,B9PartSwitch,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]]
 	{
@@ -137,7 +137,7 @@
 	}
 }
 
-@PART[SEP_B4_CORE]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,B9PartSwitch,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_B4_CORE]:NEEDS[kOS,B9PartSwitch,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]]
 	{
@@ -145,7 +145,7 @@
 	}
 }
 
-@PART[SEP_S20_TANKER]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,B9PartSwitch,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_TANKER]:NEEDS[kOS,B9PartSwitch,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]]
 	{
@@ -153,7 +153,7 @@
 	}
 }
 
-@PART[SEP_S20_HEADER]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,B9PartSwitch,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_HEADER]:NEEDS[kOS,B9PartSwitch,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]]
 	{
@@ -165,7 +165,7 @@
 // Thrust
 
 
-@PART[SEP_B4_33_CLUSTER]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_B4_33_CLUSTER]:NEEDS[kOS,CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@mass = 55
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPEngineSwitch]] {}
@@ -383,7 +383,7 @@
 		}
 	}
 }
-@PART[SEP_B4_33_CLUSTER]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_B4_33_CLUSTER]:NEEDS[kOS,!CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@mass = 55
 	@MODULE[ModuleEnginesFX]:HAS[#engineID[AllEngines]]
@@ -463,7 +463,7 @@
 	}
 }
 
-@PART[SEP_RAPTOR_SL]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_RAPTOR_SL]:NEEDS[kOS,CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPFuelSwitch]] {}
 	MODULE
@@ -552,7 +552,7 @@
 		}
 	}
 }
-@PART[SEP_RAPTOR_SL]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_RAPTOR_SL]:NEEDS[kOS,!CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleEnginesFX]
 	{
@@ -580,7 +580,7 @@
 	}
 }
 
-@PART[SEP_RAPTOR_VAC]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_RAPTOR_VAC]:NEEDS[kOS,CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPFuelSwitch]] {}
 	MODULE
@@ -669,7 +669,7 @@
 		}
 	}
 }
-@PART[SEP_RAPTOR_VAC]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_RAPTOR_VAC]:NEEDS[kOS,!CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleEnginesFX]
 	{
@@ -701,7 +701,7 @@
 // Venting
 
 
-@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW]:NEEDS[kOS,CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPVentSwtich]] {}
 	MODULE
@@ -857,7 +857,7 @@
 		}
 	}
 }
-@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW]:NEEDS[kOS,!CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleEnginesFX]
 	{
@@ -881,7 +881,7 @@
 // RCS
 
 
-@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW|SEP_B4_CORE]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW|SEP_B4_CORE]:NEEDS[kOS,CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPRCSSwitch]] {}
 	MODULE
@@ -970,7 +970,7 @@
 		}
 	}
 }
-@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_BODY|SEP_S20_TANKER|SEP_S20_CARGO|SEP_S20_CREW]:NEEDS[kOS,!CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleRCSFX]
 	{
@@ -997,7 +997,7 @@
 	}
 }
 
-@PART[SEP_B4_CORE]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_B4_CORE]:NEEDS[kOS,CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@mass = 35
     -MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPRCSSwitch]] {}
@@ -1087,7 +1087,7 @@
 		}
 	}
 }
-@PART[SEP_B4_CORE]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_B4_CORE]:NEEDS[kOS,!CommunityResourcePack,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@mass = 35
 	@MODULE[ModuleRCSFX]
@@ -1120,7 +1120,7 @@
 // Other
 
 
-@PART[SLE_SS_OLP]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SLE_SS_OLP]:NEEDS[kOS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
     MODULE
     {
@@ -1140,8 +1140,25 @@
 	}
 }
 
-@PART[SEP_S20_CREW]:NEEDS[kOS,!AnimatedAttachment,!ConfigurableContainers,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+@PART[SEP_S20_CREW]:NEEDS[kOS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
 {
 	@mass=15
 }
 
+
+// Configurable Containers Exclusion
+
+
+@PART[SEP_S20_BODY,SEP_S20_TANKER,SEP_S20_HEADER,SEP_B4_CORE]:NEEDS[kOS,!RealSolarSystem,!RealismOverhaul,ConfigurableContainers/Parts]:AFTER[StarshipExpansionProject]
+{
+	-MODULE[ModuleTankManager] {}
+}
+
+
+// Modular Fuel Tanks Exclusion
+
+
+@PART[SEP_S20_BODY|SEP_B4_CORE|SEP_S20_TANKER|SEP_S20_HEADER]:NEEDS[ModularFuelTanks,RealFuels,kOS,!RealSolarSystem,!RealismOverhaul]:AFTER[StarshipExpansionProject]
+{
+	-MODULE[ModuleFuelTanks] {}
+}
