--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -12,6 +12,7 @@
 	@crashTolerance = 50
 
 	-MODULE[ModuleSEPEngineGUI],* {}
+	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPEngineSwitch]],* {}
 
 	MODULE
 	{
@@ -138,6 +139,8 @@
 	@crashTolerance = 50
 
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]],* {}
+	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPVentSwtich]],* {}
+	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPRCSSwitch]],* {}
 	-MODULE[ModuleCryoTank],* {}
 	-MODULE[ModuleTankManager],* {}
 	-MODULE[ModuleFuelTanks],* {}
@@ -237,6 +240,8 @@
 	@name = SEP_22_RAPTOR_VAC_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
 
+	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPFuelSwitch]],* {}
+
 	@MODULE[ModuleEnginesFX]
 	{
 		-PROPELLANT,* {}
@@ -285,6 +290,8 @@
 {
 	@name = SEP_22_RAPTOR2_SL_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
+
+	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPFuelSwitch]],* {}
 
 	@MODULE[ModuleEnginesFX]
 	{
@@ -367,6 +374,8 @@
 	@minimum_drag = 0.2
 
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]],* {}
+	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPVentSwtich]],* {}
+	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPRCSSwitch]],* {}
 	-MODULE[ModuleCryoTank],* {}
 	-MODULE[ModuleTankManager],* {}
 	-MODULE[ModuleFuelTanks],* {}
@@ -515,6 +524,9 @@
 	@breakingTorque = 999
 	@crashTolerance = 50
 
+	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPVentSwtich]],* {}
+	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPRCSSwitch]],* {}
+
 	MODULE
     {
         name = kOSProcessor
@@ -615,6 +627,9 @@
 	@breakingForce = 999
 	@breakingTorque = 999
 	@crashTolerance = 50
+
+	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPVentSwtich]],* {}
+	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPRCSSwitch]],* {}
 
 	MODULE
     {
@@ -778,6 +793,8 @@
 	@breakingTorque = 999
 
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]],* {}
+	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPVentSwtich]],* {}
+	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPRCSSwitch]],* {}
 	-MODULE[ModuleCryoTank],* {}
 	-MODULE[ModuleTankManager],* {}
 	-MODULE[ModuleFuelTanks],* {}
