--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -658,6 +658,7 @@
 	@manufacturer = Starship Expansion Project with KOS Guidance
 
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPFuelSwitch]],* {}
+	-MODULE[ModuleSEPPartSwitchAction],* {}
 
 	@MODULE[ModuleEnginesFX]
 	{
