--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -1244,7 +1244,7 @@
 
 
 
-+PART[SLE_SS_OLM]:NEEDS[kOS]:AFTER[kOS]
++PART[SLE_SS_OLM]:NEEDS[kOS]
 {
 	@name = SLE_SS_OLM_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
