--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -3,13 +3,10 @@
 
 
 
-+PART[SEP_22_BOOSTER_CLUSTER]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_BOOSTER_CLUSTER]:NEEDS[kOS]
 {
 	@name = SEP_22_BOOSTER_CLUSTER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
-	@breakingForce = 999
-	@breakingTorque = 999
-	@crashTolerance = 50
 
 	-MODULE[ModuleSEPEngineGUI],* {}
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPEngineSwitch]],* {}
@@ -319,13 +316,10 @@
 
 
 
-+PART[SEP_22_BOOSTER_CORE]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_BOOSTER_CORE]:NEEDS[kOS]
 {
 	@name = SEP_22_BOOSTER_CORE_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
-	@breakingForce = 999
-	@breakingTorque = 999
-	@crashTolerance = 50
 
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]],* {}
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPVentSwtich]],* {}
@@ -494,7 +488,7 @@
 
 
 
-+PART[SEP_22_BOOSTER_GRIDFIN]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_BOOSTER_GRIDFIN]:NEEDS[kOS]
 {
 	@name = SEP_22_BOOSTER_GRIDFIN_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -509,7 +503,7 @@
 
 
 
-+PART[SEP_22_BOOSTER_INTER]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_BOOSTER_INTER]:NEEDS[kOS]
 {
 	@name = SEP_22_BOOSTER_INTER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -522,7 +516,7 @@
 
 
 
-+PART[SEP_22_RAPTOR_VAC]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_RAPTOR_VAC]:NEEDS[kOS]
 {
 	@name = SEP_22_RAPTOR_VAC_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -652,7 +646,7 @@
 
 
 
-+PART[SEP_22_RAPTOR2_SL_RC]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_RAPTOR2_SL_RC]:NEEDS[kOS]
 {
 	@name = SEP_22_RAPTOR2_SL_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -784,35 +778,26 @@
 
 
 
-+PART[SEP_22_SHIP_AFT_LEFT]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_SHIP_AFT_LEFT]:NEEDS[kOS]
 {
 	@name = SEP_22_SHIP_AFT_LEFT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
-	@breakingForce = 999
-	@breakingTorque = 999
-	@crashTolerance = 50
 }
 
 
 
-+PART[SEP_22_SHIP_AFT_RIGHT]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_SHIP_AFT_RIGHT]:NEEDS[kOS]
 {
 	@name = SEP_22_SHIP_AFT_RIGHT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
-	@breakingForce = 999
-	@breakingTorque = 999
-	@crashTolerance = 50
 }
 
 
 
-+PART[SEP_22_SHIP_BODY]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_SHIP_BODY]:NEEDS[kOS]
 {
 	@name = SEP_22_SHIP_BODY_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
-	@breakingForce = 999
-	@breakingTorque = 999
-	@crashTolerance = 50
 
 	@maximum_drag = 0.3
 	@minimum_drag = 0.2
@@ -943,13 +928,10 @@
 
 
 
-+PART[SEP_22_SHIP_CARGO]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_SHIP_CARGO]:NEEDS[kOS]
 {
 	@name = SEP_22_SHIP_CARGO_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
-	@breakingForce = 999
-	@breakingTorque = 999
-	@crashTolerance = 50
 
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPVentSwtich]],* {}
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPRCSSwitch]],* {}
@@ -1010,13 +992,10 @@
 
 
 
-+PART[SEP_22_SHIP_CREW]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_SHIP_CREW]:NEEDS[kOS]
 {
 	@name = SEP_22_SHIP_CREW_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
-	@breakingForce = 999
-	@breakingTorque = 999
-	@crashTolerance = 50
 
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPVentSwtich]],* {}
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPRCSSwitch]],* {}
@@ -1077,29 +1056,23 @@
 
 
 
-+PART[SEP_22_SHIP_FWD_LEFT]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_SHIP_FWD_LEFT]:NEEDS[kOS]
 {
 	@name = SEP_22_SHIP_FWD_LEFT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
-	@breakingForce = 999
-	@breakingTorque = 999
-	@crashTolerance = 50
 }
 
 
 
-+PART[SEP_22_SHIP_FWD_RIGHT]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_SHIP_FWD_RIGHT]:NEEDS[kOS]
 {
 	@name = SEP_22_SHIP_FWD_RIGHT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
-	@breakingForce = 999
-	@breakingTorque = 999
-	@crashTolerance = 50
 }
 
 
 
-+PART[SEP_22_SHIP_HEADER]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_SHIP_HEADER]:NEEDS[kOS]
 {
 	@name = SEP_22_SHIP_HEADER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1139,12 +1112,10 @@
 
 
 
-+PART[SEP_22_SHIP_TANKER]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_SHIP_TANKER]:NEEDS[kOS]
 {
 	@name = SEP_22_SHIP_TANKER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
-	@breakingForce = 999
-	@breakingTorque = 999
 
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]],* {}
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPVentSwtich]],* {}
@@ -1268,7 +1239,7 @@
 
 
 
-+PART[SLE_SS_OLIT_Core]:NEEDS[kOS]:AFTER[kOS]
++PART[SLE_SS_OLIT_Core]:NEEDS[kOS]
 {
 	@name = SLE_SS_OLIT_Core_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1276,7 +1247,7 @@
 
 
 
-+PART[SLE_SS_OLIT_Top]:NEEDS[kOS]:AFTER[kOS]
++PART[SLE_SS_OLIT_Top]:NEEDS[kOS]
 {
 	@name = SLE_SS_OLIT_Top_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1284,7 +1255,7 @@
 
 
 
-+PART[SLE_SS_OLIT_Base]:NEEDS[kOS]:AFTER[kOS]
++PART[SLE_SS_OLIT_Base]:NEEDS[kOS]
 {
 	@name = SLE_SS_OLIT_Base_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1292,7 +1263,7 @@
 
 
 
-+PART[SLE_SS_OLIT_MZ]:NEEDS[kOS]:AFTER[kOS]
++PART[SLE_SS_OLIT_MZ]:NEEDS[kOS]
 {
 	@name = SLE_SS_OLIT_MZ_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1300,7 +1271,7 @@
 
 
 
-@PART[SLE_SS_OLIT_Base_KOS,SLE_SS_OLIT_MZ_KOS,SLE_SS_OLIT_Top_KOS,SLE_SS_OLIT_Core_KOS,SLE_SS_OLM_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[kOS]
+@PART[SLE_SS_OLIT_Base_KOS,SLE_SS_OLIT_MZ_KOS,SLE_SS_OLIT_Top_KOS,SLE_SS_OLIT_Core_KOS,SLE_SS_OLM_KOS]:NEEDS[kOS,RealSolarSystem]
 {
 	@mass *= 4
 	%rescaleFactor = 1.6
@@ -1372,11 +1343,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!RealSolarSystem]
 {
 	@mass = 55
 }
-@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,RealSolarSystem]
 {
 	@mass = 60
 	@rescaleFactor = 1
@@ -1384,11 +1355,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!RealSolarSystem]
 {
 	@mass = 35
 }
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,RealSolarSystem]
 {
 	@mass = 120
 	@rescaleFactor = 1
@@ -1396,11 +1367,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!RealSolarSystem]
 {
 	@mass = 1
 }
-@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,RealSolarSystem]
 {
 	@mass = 3
 	@rescaleFactor = 1
@@ -1408,11 +1379,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!RealSolarSystem]
 {
 	@mass = 6
 }
-@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,RealSolarSystem]
 {
 	@mass = 8
 	@rescaleFactor = 1
@@ -1420,11 +1391,11 @@
 
 
 
-@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!RealSolarSystem]
 {
 	@mass = 1
 }
-@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,RealSolarSystem]
 {
 	@mass = 2
 	@rescaleFactor = 1
@@ -1432,11 +1403,11 @@
 
 
 
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!RealSolarSystem]
 {
 	@mass = 0.75
 }
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,RealSolarSystem]
 {
 	@mass = 1.5
 	@rescaleFactor = 1
@@ -1444,11 +1415,11 @@
 
 
 
-@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!RealSolarSystem]
 {
 	@mass = 1.25
 }
-@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,RealSolarSystem]
 {
 	@mass = 3.25
 	@rescaleFactor = 1
@@ -1456,11 +1427,11 @@
 
 
 
-@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!RealSolarSystem]
 {
 	@mass = 1
 }
-@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,RealSolarSystem]
 {
 	@mass = 3
 	@rescaleFactor = 1
@@ -1468,12 +1439,12 @@
 
 
 
-@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!RealSolarSystem]
 {
 	@mass = 20
 	CoMOffset = 0.0, -1.5, 0.0
 }
-@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,RealSolarSystem]
 {
 	@mass = 75
 	CoMOffset = 0.0, -2.4, 0.0
@@ -1491,12 +1462,12 @@
 
 
 
-@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!RealSolarSystem]
 {
 	@mass = 10
 	CoMOffset = 0.0, -2, 0.0
 }
-@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,RealSolarSystem]
 {
 	@mass = 20
 	CoMOffset = 0.0, -3.2, 0.0
@@ -1514,16 +1485,26 @@
 
 
 
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!RealSolarSystem]
 {
 	@mass = 15
 	CoMOffset = 0.0, -2, 0.0
 }
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,RealSolarSystem]
 {
 	@mass = 25
-	CoMOffset = 0.0, -3.2, 0.0
-	@rescaleFactor = 1
+	%CoMOffset = 0.0, -3.2, 0.0
+	%rescaleFactor = 1
+
+	@INTERNAL,0
+	{
+		@rescaleFactor = 1.6
+		@scale = 1.6,1.6,1.6
+		@MODEL,0
+		{
+			@scale = 1.6,1.6,1.6
+		}
+	}
 
 	%maxTemp = 873.15
 	%skinMaxTemp = 2973.15
@@ -1537,12 +1518,12 @@
 
 
 
-@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!RealSolarSystem]
 {
 	@mass = 10
 	CoMOffset = 0.0, -2, 0.0
 }
-@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,RealSolarSystem]
 {
 	@mass = 20
 	CoMOffset = 0.0, -3.2, 0.0
@@ -1560,11 +1541,11 @@
 
 
 
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!RealSolarSystem]
 {
 	@mass = 1
 }
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[kOS]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,RealSolarSystem]
 {
 	@mass = 2
 	@rescaleFactor = 1
@@ -1585,7 +1566,7 @@
 
 
 
-@PART[SEP_22_SHIP_BODY_KOS|SEP_22_SHIP_TANKER_KOS|SEP_22_SHIP_CARGO_KOS|SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,Waterfall]:AFTER[kOS]
+@PART[SEP_22_SHIP_BODY_KOS|SEP_22_SHIP_TANKER_KOS|SEP_22_SHIP_CARGO_KOS|SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,Waterfall]
 {
 	@EFFECTS
 	{
